// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConsultationAnalysis > should match snapshot after loading 1`] = `
<div>
  <!---->
  <div
    class="flex items-center justify-center md:justify-between flex-wrap gap-4 mb-4"
  >
    <div
      class="flex items-center gap-4"
    >
      <div
        class="m-auto"
      >
        <!---->
        <button
          aria-pressed="false"
          class="text-xs cursor-pointer rounded-md py-0.5 px-1 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
          data-variant="ghost"
          role="button"
          tabindex="0"
        >
          <!---->
          <!---->
          <div
            class="rotate-180"
          >
            <svg
              class="fill-neutral-700"
              height="1rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              <!---->
            </svg>
            <!---->
          </div>
           
          <span>
            Back to Overview
          </span>
          
          
          
        </button>
        
        <!---->
      </div>
       
      <h1
        class="text-center text-lg font-bold"
      >
        Detailed Consultation Analysis
      </h1>
    </div>
     
    <div
      class="flex items-center gap-4"
    >
      <!---->
    </div>
  </div>
  <!---->
   
  <section>
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <!---->
      <div
        class="flex gap-4"
      >
        <div
          class="flex items-center justify-center"
        >
          <div
            class="bg-pink-50 p-2 rounded-md"
          >
            <svg
              class="fill-pink-700"
              height="1.3rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1.3rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!---->
              <path
                d="M200-120q-33 0-56.5-23.5T120-200v-640h80v640h640v80H200Zm40-120v-360h160v360H240Zm200 0v-560h160v560H440Zm200 0v-200h160v200H640Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              
              <!---->
            </svg>
            <!---->
          </div>
        </div>
        <!---->
         
        <div
          class="grow"
        >
          <!---->
          <h2
            class="text-neutral-700 text-lg"
            style=""
          >
            <!---->
            Demographics Breakdown
            
            
          </h2>
          
          <!---->
           
          <p
            class="text-neutral-600 text-sm"
          >
            Comprehensive view of all demographic categories
          </p>
          <!---->
        </div>
         
        <!---->
      </div>
      <!---->
       
      <div
        class="mb-4 grid grid-cols-12 gap-4"
      >
        
      </div>
      <!---->
      <!---->
    </div>
    <!---->
  </section>
   
  <section>
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <!---->
      <div
        class="flex gap-4"
      >
        <div
          class="flex items-center justify-center"
        >
          <div
            class="bg-pink-50 p-2 rounded-md"
          >
            <svg
              class="fill-pink-700"
              height="1.3rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1.3rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!---->
              <path
                d="M520-520h278q-15-110-91.5-186.5T520-798v278Zm-80 358v-636q-121 15-200.5 105.5T160-480q0 122 79.5 212.5T440-162Zm80 0q110-14 187-91t91-187H520v278Zm-40-318Zm0 400q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 155.5 31.5t127 86q54.5 54.5 86 127T880-480q0 82-31.5 155T763-197.5q-54 54.5-127 86T480-80Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              
              <!---->
            </svg>
            <!---->
          </div>
        </div>
        <!---->
         
        <div
          class="grow"
        >
          <!---->
          <h2
            class="text-neutral-700 text-lg"
            style=""
          >
            <!---->
            Multiple Choice Questions
            
            
          </h2>
          
          <!---->
           
          <p
            class="text-neutral-600 text-sm"
          >
            Detailed breakdown of all multiple choice question responses
          </p>
          <!---->
        </div>
         
        <!---->
      </div>
      <!---->
       
      <div
        class="mb-4 grid grid-cols-12 gap-4"
      >
        <div
          class="col-span-12 mt-4 sm:col-span-6 lg:col-span-4"
        >
          <div
            class="h-full w-full"
          >
            <div
              class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
              data-testid="panel-component"
            >
              <div
                class="flex h-full flex-col justify-start"
              >
                <div
                  class="mb-4 flex items-start gap-4"
                >
                  <span
                    class="text-sm text-primary"
                  >
                    Q1
                  </span>
                   
                  <h3
                    class="text-xs"
                  >
                    Do you agree with the proposal to align the flavour categories of chocolate bars as outlined in the draft guidelines of the Chocolate Bar Regulation for the United Kingdom?
                  </h3>
                </div>
                 
                <div
                  class="grow flex flex-row-reverse justify-center items-center gap-4 flex-wrap-reverse"
                >
                  <div
                    id="legend-id1"
                  />
                   
                  <div
                    class="h-[6rem]"
                  >
                    <div
                      class="h-full w-full"
                    >
                      <canvas
                        class="h-full"
                      />
                    </div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="col-span-12 mt-4 sm:col-span-6 lg:col-span-4"
        >
          <div
            class="h-full w-full"
          >
            <div
              class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
              data-testid="panel-component"
            >
              <div
                class="flex h-full flex-col justify-start"
              >
                <div
                  class="mb-4 flex items-start gap-4"
                >
                  <span
                    class="text-sm text-primary"
                  >
                    Q2
                  </span>
                   
                  <h3
                    class="text-xs"
                  >
                    Do you agree with the proposal to align the flavour categories of chocolate bars as outlined in the draft guidelines of the Chocolate Bar Regulation for the United Kingdom?
                  </h3>
                </div>
                 
                <div
                  class="grow flex flex-row-reverse justify-center items-center gap-4 flex-wrap-reverse"
                >
                  <div
                    id="legend-id2"
                  />
                   
                  <div
                    class="h-[6rem]"
                  >
                    <div
                      class="h-full w-full"
                    >
                      <canvas
                        class="h-full"
                      />
                    </div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        <div
          class="col-span-12 mt-4 sm:col-span-6 lg:col-span-4"
        >
          <div
            class="h-full w-full"
          >
            <div
              class="h-full my-4 p-4 rounded-2xl border border-gray-200 bg-neutral-50"
              data-testid="panel-component"
            >
              <div
                class="flex h-full flex-col justify-start"
              >
                <div
                  class="mb-4 flex items-start gap-4"
                >
                  <span
                    class="text-sm text-primary"
                  >
                    Q3
                  </span>
                   
                  <h3
                    class="text-xs"
                  >
                    Which of the following factors do you believe are important when considering the packaging of chocolate bars? Please select all that apply: a) Sustainability, b) Design, c) Cost-effectiveness, d) Durability, e) Brand recognition.
                  </h3>
                </div>
                 
                <div
                  class="grow flex flex-row-reverse justify-center items-center gap-4 flex-wrap-reverse"
                >
                  <div
                    id="legend-id3"
                  />
                   
                  <div
                    class="h-[6rem]"
                  >
                    <div
                      class="h-full w-full"
                    >
                      <canvas
                        class="h-full"
                      />
                    </div>
                    <!---->
                  </div>
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
        
      </div>
      <!---->
    </div>
    <!---->
  </section>
  <!---->
  
</div>
`;

exports[`ConsultationAnalysis > should match snapshot initially 1`] = `
<div>
  <!---->
  <div
    class="flex items-center justify-center md:justify-between flex-wrap gap-4 mb-4"
  >
    <div
      class="flex items-center gap-4"
    >
      <div
        class="m-auto"
      >
        <!---->
        <button
          aria-pressed="false"
          class="text-xs cursor-pointer rounded-md py-0.5 px-1 border border-transparent transition-colors duration-300 self-start inline-flex gap-1 items-center hover:bg-gray-100 svelte-1d0mdzt"
          data-variant="ghost"
          role="button"
          tabindex="0"
        >
          <!---->
          <!---->
          <div
            class="rotate-180"
          >
            <svg
              class="fill-neutral-700"
              height="1rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M647-440H160v-80h487L423-744l57-56 320 320-320 320-57-56 224-224Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              <!---->
            </svg>
            <!---->
          </div>
           
          <span>
            Back to Overview
          </span>
          
          
          
        </button>
        
        <!---->
      </div>
       
      <h1
        class="text-center text-lg font-bold"
      >
        Detailed Consultation Analysis
      </h1>
    </div>
     
    <div
      class="flex items-center gap-4"
    >
      <!---->
    </div>
  </div>
  <!---->
   
  <section>
    <div
      class="h-full my-4 p-4 rounded-2xl border border-gray-200"
      data-testid="panel-component"
    >
      <!---->
      <div
        class="flex gap-4"
      >
        <div
          class="flex items-center justify-center"
        >
          <div
            class="bg-pink-50 p-2 rounded-md"
          >
            <svg
              class="fill-pink-700"
              height="1.3rem"
              role="img"
              viewBox="0 -960 960 960"
              width="1.3rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <!---->
              <path
                d="M200-120q-33 0-56.5-23.5T120-200v-640h80v640h640v80H200Zm40-120v-360h160v360H240Zm200 0v-560h160v560H440Zm200 0v-200h160v200H640Z"
                xmlns="http://www.w3.org/2000/svg"
              />
              
              <!---->
            </svg>
            <!---->
          </div>
        </div>
        <!---->
         
        <div
          class="grow"
        >
          <!---->
          <h2
            class="text-neutral-700 text-lg"
            style=""
          >
            <!---->
            Demographics Breakdown
            
            
          </h2>
          
          <!---->
           
          <p
            class="text-neutral-600 text-sm"
          >
            Comprehensive view of all demographic categories
          </p>
          <!---->
        </div>
         
        <!---->
      </div>
      <!---->
       
      <div
        class="my-8"
      >
        <div
          class="animate-spin ease-in-out w-max m-auto"
          style="animation-timing-function: ease-in-out;"
        >
          <svg
            class="fill-neutral-300"
            height="5rem"
            role="img"
            viewBox="0 -960 960 960"
            width="5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q17 0 28.5 11.5T520-840q0 17-11.5 28.5T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-17 11.5-28.5T840-520q17 0 28.5 11.5T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Z"
              xmlns="http://www.w3.org/2000/svg"
            />
            <!---->
          </svg>
          <!---->
        </div>
        <!---->
         
        <p
          class="text-center text-neutral-500"
        >
          Loading Demographics...
        </p>
      </div>
      <!---->
      <!---->
    </div>
    <!---->
  </section>
   
  <div
    class="my-8"
  >
    <div
      class="animate-spin ease-in-out w-max m-auto"
      style="animation-timing-function: ease-in-out;"
    >
      <svg
        class="fill-neutral-300"
        height="5rem"
        role="img"
        viewBox="0 -960 960 960"
        width="5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M480-80q-82 0-155-31.5t-127.5-86Q143-252 111.5-325T80-480q0-83 31.5-155.5t86-127Q252-817 325-848.5T480-880q17 0 28.5 11.5T520-840q0 17-11.5 28.5T480-800q-133 0-226.5 93.5T160-480q0 133 93.5 226.5T480-160q133 0 226.5-93.5T800-480q0-17 11.5-28.5T840-520q17 0 28.5 11.5T880-480q0 82-31.5 155t-86 127.5q-54.5 54.5-127 86T480-80Z"
          xmlns="http://www.w3.org/2000/svg"
        />
        <!---->
      </svg>
      <!---->
    </div>
    <!---->
     
    <p
      class="text-center text-neutral-500"
    >
      Loading Questions...
    </p>
  </div>
  <!---->
  
</div>
`;
